Fix background colors on mobile

--- a/app/styles/burger-menu.scss
+++ b/app/styles/burger-menu.scss
@@ -1,5 +1,6 @@
 .bm-content {
   @extend .layout-column;
+  background-color: transparent !important;
 }
 
 .bm-header {
